# sklearn_ext

./: .gitignore  Makefile  pyproject.toml
notebooks/: teste.ipynb
sklearn_ext/: __init__.py
sklearn_ext/datasets/: __init__.py  br_coronavirus.py  house_prices.py
sklearn_ext/feature_selection/: __init__.py  _drop_id_duplicated.py
sklearn_ext/preprocessing/: __init__.py  _binary.py  _datetime.py  _dtypes_infer.py  _imputer.py  _ordinal.py  _others.py  _to_index.py
tests/: test_binary.py  test_datetimeencoder.py  test_drop_id_duplicated.py  test_dtypesinfer.py  test_load_dataset.py  test_simple_imputer.py  test_to_id.py
