[tool.poetry]
name = "sklearn_ext"
version = "0.1.0"
description = ""
authors = ["douglasmartinsbraga@gmail.com"]

[tool.poetry.dependencies]
python = "^3.8"
scikit-learn = "^1.0"
pandas = "^1.3.4"
cloudpickle = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.910"
black = "^21.9b0"
jupyterlab = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
